# rag-optimize-ci

./: .gitignore  ARCHITECTURE.md  CASE_STUDY.md  CONTRIBUTING.md  DECISIONS.md  README.md  RELEASE.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
datasets/: rag_qa_small.jsonl
examples/: CONSUMER_VALIDATION.md  consumer-workflow.yml  demo_pr_comment.md  ragopt.true.yaml  ragopt.yaml
ragopt/: __init__.py  adapters.py  cli.py  config.py  engine.py  github.py  metrics.py  models.py  pydantic_models.py  reporting.py
tests/: test_all.py
ui/: README.md  index.html  package-lock.json  package.json
ui/public/: sample-run.json
ui/src/: App.tsx  styles.css  types.ts  utils.ts
ui/src/components/: CaseTable.tsx  ScoreTable.tsx
